@@ -1,3 +1,9 @@
+2010-05-27 Sebastien Pouliot  <sebastien@ximian.com>
+
+	* plugin.cpp: Once download is complete check the policy on the 
+	final URI (not the original one) to cover cases where redirection
+	was used
+
 2010-05-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* plugin-class.cpp: Cover special case where OnLoad is emmitted for 
